css/parser/tests/errors/rome/invalid/grid/repeat/unclosed/output.stderr
error: Expected ")"
 --> $DIR/tests/errors/rome/invalid/grid/repeat/unclosed/input.css:3:1
  |
3 | }
  | ^

